Fix alignment on splash page

--- a/src/theme-dark.scss
+++ b/src/theme-dark.scss
@@ -4,7 +4,7 @@ $opencruise-app-background: $opencruise-app-primary;
 $opencruise-text-color: white;
 $opencruise-toolbar-background: rgb(29,29,29);
 $opencruise-placeholder-color: rgba(255,255,255,0.541176);
-$opencruise-content-background: white;
+$opencruise-content-background: rgb(51, 51, 51);
 $opencruise-radio-active: rgb(34,170,221);
 $opencruise-switch-container: rgba(0, 0, 0, 0.38);;
 $opencruise-radio-inactive: rgb(57,107,158);
@@ -14,3 +14,8 @@ $opencruise-accent: rgb(57,107,158);
 $opencruise-label-text: #3f51b5;
 $opencruise-line-height: 1.42857143;
 $opencruise-font-family: 'Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif !important';
+$opencruise-baf-box-shadow: 0 3px 1px -2px rgba(255,255,255,.2), 0 2px 2px 0 rgba(255,255,255,.14), 0 1px 5px 0 rgba(255,255,255,.12);
+$opencruise-tree-border: #ccc;
+$opencruise-config-border: #ddd;
+$opencruise-config-header-background: rgba(255, 255, 255, 90);
+$opencruise-backdrop: rgba(255, 255, 255, 0.54);
